...
                android:layout_margin="10dp"
                app:tint="@color/colorPrimary"
                android:visibility="gone"
                />

            <ImageView
                android:id="@+id/iv_delete"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_delete"
                android:layout_margin="10dp"
                app:tint="@color/colorPrimary"
                android:visibility="gone"
                />

            <ImageView
                android:id="@+id/iv_add"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_add_photo"
                android:layout_margin="10dp"
                android:layout_alignParentRight="true"
                app:tint="@color/colorPrimary"
...
