<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGray"
    tools:context=".GalleryFragment">

    <include layout="@layout/toolbar"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorViewGray"
        app:cardCornerRadius="10dp"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_text"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="@color/colorWhite"
            />

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cards"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>